--- a/HowItWorks.html
+++ b/HowItWorks.html
@@ -26,11 +26,11 @@
   </header>
 
   <figure class="cd-image-container">
-    <img src="img/sliderImage1.png" alt="Original Image">
+    <img src="media/sliderImage1.png" alt="Original Image">
     <span class="cd-image-label" data-type="original">ORIGINAL</span>
 
     <div class="cd-resize-img"> <!-- the resizable image on top -->
-      <img src="img/sliderImage2.png" alt="Modified Image">
+      <img src="media/sliderImage2.png" alt="Modified Image">
       <span class="cd-image-label" data-type="modified">MODIFIED</span>
     </div>
 
