--- a/Contact.html
+++ b/Contact.html
@@ -24,7 +24,10 @@
     <div class="center_flex">
 
     <p class="subtext">Luise Kaut
-    email: xxx
+   
+  </p>
+    <p class="subtext">
+    email: 
   </p>
     </div>
     
