Update Contact.html and Overview.html

--- a/Overview.html
+++ b/Overview.html
@@ -31,7 +31,7 @@
       />
     </video>
 
-    <p class="subtext">IMAGINE CARBON CAN BE USED AS A BIOFUEL</p>
+    <p class="subtext">Direct Air Capture</p>
     </div>
     
     
