--- a/Overview.html
+++ b/Overview.html
@@ -31,7 +31,7 @@
       />
     </video>
 
-    <p class="subtext">Direct Air Capture</p>
+    <p class="subtext">This project....</p>
     </div>
     
     
