--- a/Architecture.html
+++ b/Architecture.html
@@ -27,18 +27,19 @@
     
 
 <!-- Slider main container -->
+<!-- //Carousel and description -->
 <div class="swiper">
   <!-- Additional required wrapper -->
   <div class="swiper-wrapper">
     <!-- Slides -->
     <div class="swiper-slide">
-<img src="media/SliderImage1.png"></img>
+<img src="media/Slider1.png"></img>
     </div>
     <div class="swiper-slide">
-      <img src="media/SliderImage2.png"></img>
+      <img src="media/Slider2.png"></img>
     </div>
     <div class="swiper-slide">
-<img src="media/SliderImage1.png"></img>
+<img src="media/SliderImage22.png"></img>
     </div>
     ...
   </div>
@@ -52,7 +53,6 @@
   <!-- If we need scrollbar -->
   <div class="swiper-scrollbar"></div>
 </div>
-<!-- //Carousel and description -->
 
 
 
