--- a/HowItWorks.html
+++ b/HowItWorks.html
@@ -26,12 +26,12 @@
   </header>
 
   <figure class="cd-image-container">
-    <img src="media/SliderImage1.png" alt="Original Image">
-    <span class="cd-image-label" data-type="original">ORIGINAL</span>
+    <img src="media/Slider11.png" alt="Original Image">
+    <span class="cd-image-label" data-type="original">SYSTEM</span>
 
     <div class="cd-resize-img"> <!-- the resizable image on top -->
-      <img src="media/SliderImage2.png" alt="Modified Image">
-      <span class="cd-image-label" data-type="modified">MODIFIED</span>
+      <img src="media/SliderImage22.png" alt="Modified Image">
+      <span class="cd-image-label" data-type="modified">DESIGN</span>
     </div>
 
     <span class="cd-handle"></span>
