--- a/OffsetNew.html
+++ b/OffsetNew.html
@@ -26,12 +26,16 @@
 
     <video width="500" loop autoplay muted>
       <source
-        src="media/Tower_7.mp4"
+        src="media/Melt_Yellow2.mp4"
         type="video/mp4"
       />
     </video>
 
-    <p class="subtext">IMAGINE CARBON CAN BE USED AS A BIOFUEL</p>
+    <p class="subtext">Imagine carbon can be reused as a biofuel</p>
+
+    <p class="subtext1">Inspired by nature, OFFSET is a design concept capturing carbon, purifying air, and bringing local ecosystems into cities by integrating Direct Air Capture into architecture in order to reach net zero emissions.
+Considering that more than half of the global population is living in cities and that the number is predicted to rise, reducing emissions, clean air and preventing heat islands in urban areas is increasingly important for the future of resilient cities.</p>
+
     </div>
     
     
