--- a/Architecture.html
+++ b/Architecture.html
@@ -32,13 +32,25 @@
   <div class="swiper-wrapper">
     <!-- Slides -->
     <div class="swiper-slide">
-<img src="media/Slider1.png"></img>
+<img src="media/01.png"></img>
     </div>
     <div class="swiper-slide">
-      <img src="media/Slider2.png"></img>
+      <img src="media/02.png"></img>
     </div>
     <div class="swiper-slide">
-<img src="media/SliderImage22.png"></img>
+<img src="media/03.png"></img>
+    </div>
+       <div class="swiper-slide">
+<img src="media/04.png"></img>
+    </div>
+       <div class="swiper-slide">
+<img src="media/06.png"></img>
+    </div>
+       <div class="swiper-slide">
+<img src="media/07.png"></img>
+    </div>
+       <div class="swiper-slide">
+<img src="media/08.png"></img>
     </div>
     ...
   </div>
