--- a/HowItWorks.html
+++ b/HowItWorks.html
@@ -26,11 +26,11 @@
   </header>
 
   <figure class="cd-image-container">
-    <img src="media/Slider11.png" alt="Original Image">
+    <img src="media/Sliderneu1.png" alt="Original Image">
     <span class="cd-image-label" data-type="original">SYSTEM</span>
 
     <div class="cd-resize-img"> <!-- the resizable image on top -->
-      <img src="media/SliderImage22.png" alt="Modified Image">
+      <img src="media/Sliderneu2.png" alt="Modified Image">
       <span class="cd-image-label" data-type="modified">DESIGN</span>
     </div>
 
