--- a/Architecture.html
+++ b/Architecture.html
@@ -17,7 +17,7 @@
   <body>
     <div class="allContent">
       <header class="hf_flex">
-      <a href="OffsetNew.html" class="heading_banner">HOME</a>
+      <a href="/" class="heading_banner">HOME</a>
       <a href="Overview.html" class="heading_banner">OVERVIEW</a>
       <a href="HowItWorks.html" class="heading_banner">HOW IT WORKS</a>
       <a href="Architecture.html" class="heading_banner">ARCHITECTURE</a>
