--- a/HowItWorks.html
+++ b/HowItWorks.html
@@ -10,15 +10,13 @@
 
   <link rel="stylesheet" href="css/reset.css"> <!-- CSS reset -->
   <link rel="stylesheet" href="css/style.css"> <!-- Resource style -->
-  <link rel="stylesheet" href="Offset_New.css">
-  <script src="js/modernizr.js"></script> <!-- Modernizr -->
-    
-  <title>Image Comparison Slider | CodyHouse</title>
+  <link rel="stylesheet" href="Offset_New.css">    
+  <title>Offset - How It Works</title>
 </head>
 <body>
   <div class="allContent">
     <header class="hf_flex">
-    <a href="OffsetNew.html" class="heading_banner">HOME</a>
+      <a href="/" class="heading_banner">HOME</a>
       <a href="Overview.html" class="heading_banner">OVERVIEW</a>
       <a href="HowItWorks.html" class="heading_banner">HOW IT WORKS</a>
       <a href="Architecture.html" class="heading_banner">ARCHITECTURE</a>
@@ -50,8 +48,7 @@
     </footer>
   </div>
   
-<script src="js/jquery-2.1.1.js"></script>
-<script src="js/jquery.mobile.custom.min.js"></script> <!-- Resource jQuery -->
-<script src="js/main.js"></script> <!-- Resource jQuery -->
+  <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
+  <script src="js/main.js"></script> <!-- Resource jQuery -->
 </body>
 </html>
