--- a/Model.html
+++ b/Model.html
@@ -29,7 +29,7 @@
         <!-- <model-viewer> HTML element -->
 
           <model-viewer src="model/ok.gltf" ar ar-modes="webxr scene-viewer quick-look" camera-controls poster="poster.webp" shadow-intensity="1">
-            <div class="progress-bar hide" slot="progress-bar">
+            <div class="progress-bar" slot="progress-bar">
               <div class="update-bar"></div>
             </div>
             <button slot="ar-button" id="ar-button">
