--- a/Contact.html
+++ b/Contact.html
@@ -24,7 +24,7 @@
     <div class="center_flex">
 
       <p class="subtext">
-        email: <a href="mailto:luise_kaut@sciarc.edu" style="color: #fff;">luise_kaut@sciarc.edu</a>
+        email: <a href="mailto:kaut.luise@gmail.com style="color: #fff;">luise_kaut@sciarc.edu</a>
       </p>
     </div>
     
