--- a/Contact.html
+++ b/Contact.html
@@ -24,7 +24,9 @@
     <div class="center_flex">
 
       <p class="subtext">
-        email: <a href="mailto:kaut.luise@gmail.com style="color: #fff;">luise_kaut@sciarc.edu</a>
+        Luise Kaut
+        M.Sc. Architecture TUD
+        email: <a href="mailto:kaut.luise@gmail.com style="color: #fff;">kaut.luise@gmail.com</a>
       </p>
     </div>
     
