--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="center_flex">
       <h1>OFFSET</h1>
 
-    <video width="500" loop autoplay muted>
+    <video width="500" loop autoplay muted playsinline>
       <source
         src="media/Melt_Yellow2.mp4"
         type="video/mp4"
