--- a/Overview.html
+++ b/Overview.html
@@ -23,7 +23,7 @@
     
     <div class="center_flex">
 
-      <video width="500" loop autoplay muted>
+      <video width="500" loop autoplay muted playsinline>
         <source
         src="media/Co2_Catch.mp4"
         type="video/mp4"
