--- a/Contact.html
+++ b/Contact.html
@@ -24,8 +24,10 @@
     <div class="center_flex">
 
       <p class="subtext">
-        Luise Kaut
-        M.Sc. Architecture TUD
+        Luise Kaut</p>
+        <p class="subtext">
+        M.Sc. Architecture TUD</p>
+         <p class="subtext">
         email: <a href="mailto:kaut.luise@gmail.com style="color: #fff;">kaut.luise@gmail.com</a>
       </p>
     </div>
