--- a/Contact.html
+++ b/Contact.html
@@ -26,9 +26,10 @@
       <p class="subtext">
         Luise Kaut</p>
         <p class="subtext">
-        M.Sc. Architecture TUD</p>
+        <a href="https://www.linkedin.com/in/luisekaut">linkedin.com/in/luisekaut</a>
+      </p><
          <p class="subtext">
-        email: <a href="mailto:kaut.luise@gmail.com style="color: #fff;">kaut.luise@gmail.com</a>
+        email: <a href="mailto:kaut.luise@gmail.com style="color: #fff; >kaut.luise@gmail.com</a>
       </p>
     </div>
     
