--- a/Contact.html
+++ b/Contact.html
@@ -26,6 +26,8 @@
       <p class="subtext">
         Luise Kaut</p>
         <p class="subtext">
+          M.Sc. Architecture TUD, Germany (2019)</p>
+        <p class="subtext">
         <a href="https://www.linkedin.com/in/luisekaut">linkedin.com/in/luisekaut</a>
       </p>
          <p class="subtext">
