--- a/Contact.html
+++ b/Contact.html
@@ -28,10 +28,10 @@
         <p class="subtext">
           M.Sc. Architecture TUD, Germany (2019)</p>
         <p class="subtext">
-        <a href="https://www.linkedin.com/in/luisekaut">linkedin.com/in/luisekaut</a>
+        <a href="https://www.linkedin.com/in/luisekaut" style=color: #ffffff; >linkedin.com/in/luisekaut</a>
       </p>
          <p class="subtext">
-        email: <a href="mailto:kaut.luise@gmail.com style="color: #fff; >kaut.luise@gmail.com</a>
+        email: <a href="mailto:kaut.luise@gmail.com" style=color: #ffffff; >kaut.luise@gmail.com</a>
       </p>
     </div>
     
