--- a/Overview.html
+++ b/Overview.html
@@ -34,7 +34,7 @@
         <a href="Model.html" class="heading_banner" style="border: 1px solid #fff; padding: 4px 6px;">View Model</a>
       </p>
 
-      <p class="subtext1">Therefore, this project rethinks the organization of vertical living at the scale of a megacity by considering a symbiosis of technology, architecture, and its occupants: plants, humans, and air.
+      <p class="subtext1">This project rethinks the organization of vertical living at the scale of a megacity by considering a symbiosis of technology, architecture, and its occupants: plants, humans, and air.
       The prototypical building will be plugged into cities around the globe by functioning as an environmental machine. It will capture air, separate particles, and transform carbon molecules into salt which can be converted to biofuel offsite.</p>
 
       <p class="subtext1">As a result the building becomes climate-responsive. The design process is automated based on microclimates like wind, sun, and humidity. GIS mapping localizes the site whereas algorithms define the orientation and inner structure.
